feat: warehouse: + методы assembly shipped + добавление запроса из Delivery к складу markOrderShipped